--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,9 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="bottom"
+    android:isScrollContainer="true"
+    android:layout_marginBottom="20dp"
     tools:context=".activities.MainActivity">
 
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="bottom"
+    android:orientation="vertical">
     <ImageView
         android:layout_width="214dp"
         android:layout_height="212dp"
@@ -19,30 +25,26 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:padding="4dp"
         android:layout_gravity="bottom"
-        android:padding="5dp"
+
         android:gravity="bottom">
         <com.google.android.material.textfield.TextInputLayout
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:hint="Enter Username"
-
+            app:boxStrokeColor="@color/primaryDarkColor"
+            app:startIconTintMode="screen"
+            app:startIconTint="@color/transparent"
+            app:startIconDrawable="@drawable/phone"
             android:layout_width="match_parent"
+            app:hintTextColor="@color/black"
             android:layout_height="wrap_content">
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/edt_username"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-
-            android:hint="Enter Password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/edt_password"
+                android:outlineSpotShadowColor="@color/primaryDarkColor"
+                android:inputType="number"
+                android:maxLength="10"
+                android:digits="0123456789"
+                android:id="@+id/edt_mobile"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
@@ -79,14 +81,17 @@
                 android:layout_height="55dp"
                 android:layout_gravity="center"
                 android:scrollbarSize="14dp"
+                android:clickable="false"
                 android:textColor="@color/black"
                 android:backgroundTint="@color/primaryColor"
-                android:text="Login"/>
+                android:text="Get OTP"/>
         </LinearLayout>
 
 
 
     </LinearLayout>
+
+</LinearLayout>
 
 
 </LinearLayout>
