--- a/app/src/main/res/layout/activity_new_user.xml
+++ b/app/src/main/res/layout/activity_new_user.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:gravity="center"
     tools:context=".activities.NewUser">
 
     <LinearLayout
@@ -78,8 +79,6 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/edt_mobile"
                 android:layout_width="match_parent"
-                android:background="@drawable/edittext_bg"
-
                 android:layout_height="wrap_content" />
 
         </com.google.android.material.textfield.TextInputLayout>
