--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primaryColor">#66bb6a</color>
-    <color name="primaryLightColor">#98ee99</color>
-    <color name="primaryDarkColor">#338a3e</color>
+    <color name="primaryColor">#00bfff</color>
+    <color name="primaryLightColor">#6af2ff</color>
+    <color name="primaryDarkColor">#008fcc</color>
     <color name="primaryTextColor">#000000</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="transparent">#00000000</color>
     <color name="link_dark_blue">#02217C</color>
     <color name="light_black">#3E4A3D</color>
+    <color name="app_general_grey">#b0b0b0</color>
 </resources>
