--- a/app/src/main/res/layout/activity_app_main.xml
+++ b/app/src/main/res/layout/activity_app_main.xml
@@ -19,6 +19,7 @@
         android:layout_height="wrap_content">
 
         <LinearLayout
+            android:id="@+id/ll_status"
             android:layout_weight="1"
             android:orientation="vertical"
             android:layout_margin="2dp"
@@ -26,8 +27,8 @@
             android:layout_height="wrap_content">
 
             <ImageView
+                android:id="@+id/iv_status"
                 android:layout_width="match_parent"
-
                 android:src="@drawable/ic_nav"
                 android:layout_height="wrap_content"/>
             <TextView
@@ -41,6 +42,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/ll_updates"
             android:layout_weight="1"
             android:layout_margin="2dp"
             android:orientation="vertical"
@@ -49,7 +51,7 @@
 
             <ImageView
                 android:layout_width="match_parent"
-
+                android:id="@+id/iv_updates"
                 android:src="@drawable/ic_nav"
                 android:layout_height="wrap_content"/>
             <TextView
@@ -61,15 +63,17 @@
 
 
         </LinearLayout>
+
         <LinearLayout
             android:layout_margin="2dp"
-
+            android:id="@+id/ll_contacts"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1">
 
             <ImageView
+                android:id="@+id/iv_contacts"
                 android:layout_width="match_parent"
                 android:src="@drawable/ic_nav"
                 android:layout_height="wrap_content"/>
@@ -82,17 +86,18 @@
 
 
         </LinearLayout>
+
         <LinearLayout
             android:layout_margin="2dp"
-
+            android:id="@+id/ll_certs"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1">
 
             <ImageView
+                android:id="@+id/iv_certs"
                 android:layout_width="match_parent"
-
                 android:src="@drawable/ic_nav"
                 android:layout_height="wrap_content"/>
             <TextView
