--- a/app/src/main/res/drawable/inactive_tab.xml
+++ b/app/src/main/res/drawable/inactive_tab.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="oval" xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/tab_active_bg" />
-    <size android:width="5dp"
-        android:height="5dp"/>
+    <solid android:color="@color/tab_inactive_bg" />
+    <size android:width="2dp"
+        android:height="2dp"/>
     <corners android:radius="5dp"/>
 </shape>
