--- a/app/src/main/res/layout/activity_app_main.xml
+++ b/app/src/main/res/layout/activity_app_main.xml
@@ -5,115 +5,132 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:layout_margin="4dp"
     tools:context=".activities.AppMain">
 
     <include layout="@layout/appbar_layout" />
-
-    <LinearLayout
-        android:padding="4dp"
-        android:id="@+id/ll_tabs"
-        android:layout_marginTop="8dp"
-        android:orientation="horizontal"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:cardUseCompatPadding="true"
+        app:cardElevation="4dp"
+        app:cardCornerRadius="3dp" >
 
         <LinearLayout
-            android:id="@+id/ll_status"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:layout_margin="2dp"
+            android:padding="4dp"
+            android:id="@+id/ll_tabs"
+            android:layout_marginTop="8dp"
+            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <ImageView
-                android:id="@+id/iv_status"
+            <LinearLayout
+                android:id="@+id/ll_status"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:layout_margin="2dp"
+                android:padding="4dp"
                 android:layout_width="match_parent"
-                android:src="@drawable/ic_nav"
-                android:layout_height="wrap_content"/>
-            <TextView
-                android:gravity="center"
-                android:textColor="@color/black"
-                android:layout_width="match_parent"
-                android:text="Your Status"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content">
 
+                <ImageView
+                    android:id="@+id/iv_status"
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:src="@drawable/ic_nav"
+                    android:layout_height="wrap_content"/>
+                <TextView
+                    android:gravity="center"
+                    android:textColor="@color/black"
+                    android:layout_width="match_parent"
+                    android:text="Your Status"
+                    android:layout_height="wrap_content"/>
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/ll_updates"
+                android:layout_weight="1"
+                android:layout_margin="2dp"
+                android:padding="2dp"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/iv_updates"
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:src="@drawable/ic_nav"
+                    android:layout_height="wrap_content"/>
+                <TextView
+                    android:gravity="center"
+                    android:textColor="@color/black"
+                    android:layout_width="match_parent"
+                    android:text="Updates"
+                    android:layout_height="wrap_content"/>
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_margin="2dp"
+                android:id="@+id/ll_contacts"
+                android:orientation="vertical"
+                android:padding="2dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+
+                <ImageView
+                    android:id="@+id/iv_contacts"
+                    android:layout_width="wrap_content"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_nav"
+                    android:layout_height="wrap_content"/>
+                <TextView
+                    android:gravity="center"
+                    android:textColor="@color/black"
+                    android:layout_width="match_parent"
+                    android:text="Recent contact"
+                    android:layout_height="wrap_content"/>
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_margin="2dp"
+                android:id="@+id/ll_certs"
+                android:orientation="vertical"
+                android:padding="2dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+
+                <ImageView
+                    android:id="@+id/iv_certs"
+                    android:layout_width="wrap_content"
+                    android:src="@drawable/ic_nav"
+                    android:layout_gravity="center"
+                    android:layout_height="wrap_content"/>
+                <TextView
+                    android:gravity="center"
+                    android:textColor="@color/black"
+                    android:layout_width="match_parent"
+                    android:text="Certificates"
+                    android:layout_height="wrap_content"/>
+
+
+            </LinearLayout>
 
         </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/ll_updates"
-            android:layout_weight="1"
-            android:layout_margin="2dp"
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+    </androidx.cardview.widget.CardView>
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:id="@+id/iv_updates"
-                android:src="@drawable/ic_nav"
-                android:layout_height="wrap_content"/>
-            <TextView
-                android:gravity="center"
-                android:textColor="@color/black"
-                android:layout_width="match_parent"
-                android:text="Updates"
-                android:layout_height="wrap_content"/>
-
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_margin="2dp"
-            android:id="@+id/ll_contacts"
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1">
-
-            <ImageView
-                android:id="@+id/iv_contacts"
-                android:layout_width="match_parent"
-                android:src="@drawable/ic_nav"
-                android:layout_height="wrap_content"/>
-            <TextView
-                android:gravity="center"
-                android:textColor="@color/black"
-                android:layout_width="match_parent"
-                android:text="Recent contact"
-                android:layout_height="wrap_content"/>
-
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_margin="2dp"
-            android:id="@+id/ll_certs"
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1">
-
-            <ImageView
-                android:id="@+id/iv_certs"
-                android:layout_width="match_parent"
-                android:src="@drawable/ic_nav"
-                android:layout_height="wrap_content"/>
-            <TextView
-                android:gravity="center"
-                android:textColor="@color/black"
-                android:layout_width="match_parent"
-                android:text="Certificates"
-                android:layout_height="wrap_content"/>
-
-
-        </LinearLayout>
-
-    </LinearLayout>
 
     <FrameLayout
         android:id="@+id/frm_tabframe"
+        android:layout_margin="4dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
