--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,7 @@
     <color name="link_dark_blue">#02217C</color>
     <color name="light_black">#3E4A3D</color>
     <color name="tab_active_bg">#388e3c</color>
+    <color name="tab_inactive_bg">#ffffff</color>
     <color name="app_general_grey">#b0b0b0</color>
+    <color name="support_tab_bg">#87b4fd</color>
 </resources>
