--- a/app/src/main/res/layout/fragment_userstatus.xml
+++ b/app/src/main/res/layout/fragment_userstatus.xml
@@ -5,6 +5,11 @@
     android:layout_height="match_parent"
     tools:context=".Fragments.UserStatusFragment">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        />
 <!--helpline number-->
     <LinearLayout
         android:layout_width="match_parent"
