--- a/app/src/main/res/layout/activity_assessment.xml
+++ b/app/src/main/res/layout/activity_assessment.xml
@@ -1,9 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".activities.AssessmentActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:id="@+id/ll_mainlayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tv_defeault_q"
+            android:layout_width="270dp"
+            android:padding="10dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="15dp"
+            android:background="@drawable/chat_bg"
+            android:textColor="@color/white"
+            android:text="@string/default_assessment"
+            android:textSize="16dp" />
+
+
+        <TextView
+            android:id="@+id/tv_q1"
+            android:padding="10dp"
+            android:textColor="@color/white"
+            android:layout_width="270dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="15dp"
+            android:background="@drawable/chat_bg"
+            android:text="What is your Gender?"
+            android:textSize="16dp" />
+
+
+        <TextView
+            android:id="@+id/tv_q2"
+            android:padding="10dp"
+            android:textColor="@color/white"
+            android:layout_width="270dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="15dp"
+            android:background="@drawable/chat_bg"
+            android:text="Please select your age group."
+            android:textSize="16dp" />
+
+
+        <TextView
+            android:id="@+id/tv_q3"
+            android:padding="10dp"
+            android:layout_width="270dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="15dp"
+            android:background="@drawable/chat_bg"
+            android:text="Are you experiencing any of the following symptoms?"
+            android:textSize="16dp"
+            android:textColor="@color/white"
+            />
+
+        <TextView
+            android:padding="10dp"
+            android:id="@+id/tv_q3"
+            android:layout_width="270dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="15dp"
+            android:background="@drawable/chat_bg"
+            android:text="Do you have any of the following pre-existing conditions?"
+            android:textSize="16dp"
+            android:textColor="@color/white"
+            />
+
+        <TextView
+            android:padding="10dp"
+            android:id="@+id/tv_q3"
+            android:layout_width="270dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="15dp"
+            android:background="@drawable/chat_bg"
+            android:text="Have you travelled in past 14 days in any of the states below"
+            android:textSize="16dp"
+            android:textColor="@color/white"
+            />
+
+    </LinearLayout>
+
+</LinearLayout>
