--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
         android:gravity="bottom">
         <com.google.android.material.textfield.TextInputLayout
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:hint="Enter Username"
+            android:hint="Enter mobile number"
             app:boxStrokeColor="@color/primaryDarkColor"
             app:startIconTintMode="screen"
             app:startIconTint="@color/transparent"
@@ -50,23 +50,29 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
-        <LinearLayout
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:hint="Enter OTP"
+            app:boxStrokeColor="@color/primaryDarkColor"
+            app:startIconTintMode="screen"
+            app:startIconTint="@color/transparent"
+            app:startIconDrawable="@drawable/otp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            app:hintTextColor="@color/black"
+            android:visibility="gone"
+            android:layout_height="wrap_content">
+            <com.google.android.material.textfield.TextInputEditText
+                android:outlineSpotShadowColor="@color/primaryDarkColor"
+                android:inputType="number"
+                android:maxLength="10"
+                android:digits="0123456789"
+                android:id="@+id/edt_otp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
 
-            <TextView
-                android:id="@+id/tv_register"
-                android:layout_marginTop="5dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom|end"
-                android:scrollbarSize="14dp"
-                android:textColor="@color/link_dark_blue"
-                android:textStyle="bold"
-                android:layout_marginEnd="10dp"
-                android:text="New user! Register Here"/>
-        </LinearLayout>
+        </com.google.android.material.textfield.TextInputLayout>
+
+
 
         <LinearLayout
             android:layout_width="match_parent"
