--- a/app/src/main/res/layout/fragment_covupdates.xml
+++ b/app/src/main/res/layout/fragment_covupdates.xml
@@ -3,7 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_marginStart="10dp"
+    android:layout_marginTop="0dp"
+    android:layout_marginEnd="10dp">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -68,7 +71,7 @@
                             android:layout_width="220dp"
                             android:layout_height="180dp"
                             android:padding="8dp"
-                            app:egLegendTextSize="8sp"
+                            app:egLegendTextSize="0dp"
                             app:egUsePieRotation="true"
                             app:egValueTextSize="15sp" />
 
@@ -591,10 +594,10 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recyclerview"
                     android:layout_width="match_parent"
-                    tools:listitem="@layout/layout_item"
                     android:layout_height="match_parent"
                     android:layout_marginTop="-5dp"
-                    android:padding="10dp" />
+                    android:padding="10dp"
+                    tools:listitem="@layout/layout_item" />
 
             </LinearLayout>
 
@@ -604,6 +607,7 @@
                 android:layout_marginTop="10dp"
                 android:background="@drawable/realtivebg"
                 android:orientation="vertical">
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -621,9 +625,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    />
-
-
+                    tools:listitem="@layout/statedetails_list" />
 
 
             </LinearLayout>
@@ -631,7 +633,6 @@
         </LinearLayout>
 
     </ScrollView>
-
 
 
 </RelativeLayout>
