--- a/app/src/main/res/layout/activity_assessment.xml
+++ b/app/src/main/res/layout/activity_assessment.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical"
     tools:context=".activities.AssessmentActivity">
 
+<!--
     <LinearLayout
         android:id="@+id/ll_mainlayout"
         android:layout_width="match_parent"
@@ -21,7 +22,7 @@
             android:layout_marginBottom="15dp"
             android:background="@drawable/chat_bg"
             android:textColor="@color/white"
-            android:text="@string/default_assessment"
+            android:text="Assessment"
             android:textSize="16dp" />
 
 
@@ -86,5 +87,6 @@
             />
 
     </LinearLayout>
+-->
 
 </LinearLayout>
